README.md with wireframes and ERD

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "express-auth-mongoose-boilerplate",
+  "name": "kitchWitchAPI",
   "version": "1.0.0",
-  "description": "Auth boilerplate for mongoose express using token auth",
+  "description": "A recipe app to get recipes based on ingridents on hand",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Timm Schoenborn",
+  "author": "Kate Attardo",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
